--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/home/tim/git/GeneralSerializer/oeall22.jar"/>
+	<classpathentry kind="lib" path="D:/dewan_backup/Java/lib/oeall22.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
