--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_181"/>
 	<classpathentry kind="lib" path="D:/dewan_backup/Java/lib/oeall22.jar" sourcepath="/util/src"/>
+	<classpathentry kind="lib" path="D:/dewan_backup/Java/lib/omp4j-1.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
